force-app/main/default/objects/pse__Revenue_Forecast__c/fields/pse__Milestone__c.field-meta.xml
<CustomField>
    <fullName>pse__Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the milestone this revenue forecast relates to.</description>
    <inlineHelpText>Lookup to the milestone this revenue forecast relates to.</inlineHelpText>
    <label>Milestone</label>
    <referenceTo>pse__Milestone__c</referenceTo>
    <relationshipLabel>Revenue Forecasts</relationshipLabel>
    <relationshipName>Revenue_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>