force-app/main/default/objects/pse__Revenue_Forecast__c/fields/pse__Revenue_Pending_Recognition__c.field-meta.xml
<CustomField>
    <fullName>pse__Revenue_Pending_Recognition__c</fullName>
    <description>The revenue that is ready for recognition on this revenue forecast.</description>
    <inlineHelpText>The revenue that is ready for recognition on this revenue forecast.</inlineHelpText>
    <label>Revenue Pending Recognition</label>
    <summarizedField>pse__Revenue_Forecast_Type__c.pse__Revenue_Pending_Recognition__c</summarizedField>
    <summaryForeignKey>pse__Revenue_Forecast_Type__c.pse__Revenue_Forecast__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>