force-app/main/default/objects/pse__Revenue_Forecast__c/fields/pse__Revenue_Recognized_To_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Revenue_Recognized_To_Date__c</fullName>
    <description>The revenue that has already been recognized on this revenue forecast.</description>
    <inlineHelpText>The revenue that has already been recognized on this revenue forecast.</inlineHelpText>
    <label>Revenue Recognized to Date</label>
    <summarizedField>pse__Revenue_Forecast_Type__c.pse__Revenue_Recognized_To_Date__c</summarizedField>
    <summaryForeignKey>pse__Revenue_Forecast_Type__c.pse__Revenue_Forecast__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>